<resources>
    <string name="app_name">Flashcards Pro</string>
    <string name="popupLabel">Set Name</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonCreate">Create</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="confirmPW">Confirm Password</string>
    <string name="createAccount">Create Account</string>
    <string name="no_sets_to_display">No sets to display</string>
    <string name="more_options">more options</string>
    <string name="login">Login</string>
    <string name="rename_string">Rename</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="account">Account</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="app_logo">App Logo</string>
    <string name="back">Back</string>
    <string name="front">Front</string>
    <string name="no_cards_to_display">No cards to display</string>
    <string name="new_set_name">New set name</string>
    <string name="new_card_front">New card front</string>
    <string name="new_card_back">New card back</string>
    <string name="delete">Delete</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm">Confirm</string>
    <string name="new_username">New Username</string>
    <string name="rename">Rename</string>
</resources>
