<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="300dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="230dp"
        android:orientation="vertical"
        android:padding="0dp">

        <EditText
            android:id="@+id/oldPasswordFromChangePassword"
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword"
            android:hint="@string/old_password"
            android:padding="0dp"/>

        <EditText
            android:id="@+id/passwordFromChangePassword"
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword"
            android:hint="@string/new_password"
            android:padding="0dp"/>

        <EditText
            android:id="@+id/confirmPasswordFromChangePassword"
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_new_password"
            android:padding="0dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:padding="0dp"
        android:gravity="center">

        <Button
            android:id="@+id/dialogButtonCancelFromChangePassword"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background ="@color/colorPrimary"
            android:text="@string/buttonCancel"
            android:textColor="#FFFFFF"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:padding="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:clickable="true"
            android:focusable="true"
            />

        <Button
            android:id="@+id/dialogButtonChangePasswordFromChangePassword"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:padding="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

</LinearLayout>